@@ -39,10 +39,6 @@
 class DeclinationFilter : public QObject, public Filter<CompassData, DeclinationFilter, CompassData>
 {
     Q_OBJECT;
-    /**
-     * Holds the declination correction amount applied in the calculation.
-     * The value is read from GConf key \c /system/osso/location/settings/magneticvariation.
-     */
     Q_PROPERTY(int declinationCorrection READ declinationCorrection);
 
 public:
@@ -55,20 +51,25 @@ public:
         return new DeclinationFilter();
     }
 
-    int declinationCorrection() const { return declinationCorrection_; }
+    /**
+     * Holds the declination correction amount applied in the calculation.
+     * The value is read from GConf key \c /system/osso/location/settings/magneticvariation.
+     */
+    int declinationCorrection();
 
 private:
     DeclinationFilter();
 
     void correct(unsigned, const CompassData*);
+
     void loadSettings();
 
     CompassData orientation_;
     QAtomicInt declinationCorrection_;
     quint64 lastUpdate_;
+    quint64 updateInterval_;
 
     static const char* declinationKey;
-    static quint64 updateInterval;
 };
 
 #endif // DECLINATIONFILTER_H
